<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgAvengersLogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:src="@drawable/avengers_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgAvengersLogo"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:padding="6dp"
        android:inputType="phone"
        android:maxLines="1"
        android:maxLength="10"
        android:hint="@string/mobile_number"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etMobileNumber"
        android:layout_marginTop="30dp"
        android:padding="6dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/password"
        />
    
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="50dp"
        android:padding="6dp"
        android:backgroundTint="#000000"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/log_in"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnLogin"
        android:padding="6dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textSize="16dp"
        />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:textSize="20dp"

        android:text="@string/register"
        />

</RelativeLayout>